--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -6,21 +6,27 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
-    <h2>Todo</h2>
-    <div ng-controller="TodoCtrl">
-      <span>{{remaining()}} of {{todos.length}} remaining</span>
-      [ <a href="" ng-click="archive()">archive</a> ]
-      <ul class="unstyled">
-        <li ng-repeat="todo in todos">
-          <input type="checkbox" ng-model="todo.done">
-          <span class="done-{{todo.done}}">{{todo.text}}</span>
-        </li>
-      </ul>
-      <form ng-submit="addTodo()">
-        <input type="text" ng-model="todoText"  size="30"
-               placeholder="add new todo here">
-        <input class="btn-primary" type="submit" value="add">
-      </form>
+    <div ng-controller="GeneologyCtrl">
+      <h2>Original dataset</h2>
+        <ul>
+          <li ng-repeat="canonical_dataset in canonical_datasets">
+            <a href="{{canonical_dataset.url()}}">{{canonical_dataset.name}}</a>
+          </li>
+        </ul>
+      <h2>Derived datasets</h2>
+        <span>{{remaining()}} of {{todos.length}} remaining</span>
+        [ <a href="" ng-click="archive()">archive</a> ]
+        <ul class="unstyled">
+          <li ng-repeat="todo in todos">
+            <input type="checkbox" ng-model="todo.done">
+            <span class="done-{{todo.done}}">{{todo.text}}</span>
+          </li>
+        </ul>
+        <form ng-submit="addTodo()">
+          <input type="text" ng-model="todoText"  size="30"
+                 placeholder="add new todo here">
+          <input class="btn-primary" type="submit" value="add">
+        </form>
     </div>
   </body>
 </html>
