--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -8,25 +8,21 @@
   <body>
     <div ng-controller="GeneologyCtrl">
       <h2>Original dataset</h2>
-        <ul>
-          <li ng-repeat="canonical_dataset in canonical_datasets">
-            <a href="{{canonical_dataset.url()}}">{{canonical_dataset.name}}</a>
-          </li>
-        </ul>
+      <div>
+        <a href="" ng-click="prev()">&lt;</a>
+        <a href="{{canonical_dataset.url()}}">{{canonical_dataset.name}}</a>
+        <a href="" ng-click="next()">&lt;</a>
+      </div>
       <h2>Derived datasets</h2>
-        <span>{{remaining()}} of {{todos.length}} remaining</span>
-        [ <a href="" ng-click="archive()">archive</a> ]
-        <ul class="unstyled">
-          <li ng-repeat="todo in todos">
-            <input type="checkbox" ng-model="todo.done">
-            <span class="done-{{todo.done}}">{{todo.text}}</span>
-          </li>
-        </ul>
-        <form ng-submit="addTodo()">
-          <input type="text" ng-model="todoText"  size="30"
-                 placeholder="add new todo here">
-          <input class="btn-primary" type="submit" value="add">
-        </form>
+      <ul class="portals">
+        <li ng-repeat="portal in canonical_dataset.portals">
+          <ul>
+            <li ng-repeat="derived_dataset in portal.derived_datasets">
+              <a href="{{derived_dataset.url()}}">{{derived_dataset.name}}</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
