--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -10,18 +10,13 @@
       <h2>Original dataset</h2>
       <div>
         <a href="" ng-click="prev()">&lt;</a>
-        <a href="{{canonical_dataset.url()}}">{{canonical_dataset.name}}</a>
+        <a href="{{table.source.portal}}">{{table.source.name}}</a>
         <a href="" ng-click="next()">&gt;</a>
       </div>
       <h2>Derived datasets</h2>
-      <ul class="portals">
-        <li style="list-style: none;" ng-repeat="portal in canonical_dataset.portals">
-          <h3><a href="{{portal.url()}}">{{portal.portal}}</a></h3>
-          <ul>
-            <li ng-repeat="filtered_view in portal.filtered_views">
-              <a href="{{filtered_view.url()}}">{{filtered_view.name}}</a>
-            </li>
-          </ul>
+      <ul class="derived">
+        <li ng-repeat="dataset in table.datasets">
+          <a href="https://{{dataset.portal}}/-/-/{{dataset.id}}">{{dataset.name}}</a>
         </li>
       </ul>
     </div>
