--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -33,7 +33,7 @@
             <td>{{dataset.prettyDate}}</td>
             <td>{{dataset.downloadCount}}</td>
             <td>{{dataset.viewCount}}</td>
-            <td title="{{dataset.nrow}} rows by {{dataset.ncol}} columns">{{dataset.nrow * dataset.ncol}} cells</td>
+            <td title="{{dataset.nrow}} rows by {{dataset.ncol}} columns">{{dataset.ncell}} cells</td>
             <td ng-controller="CopiesCtrl">
               <a href="" ng-show="!showCopies" ng-click="expand()">{{dataset.portals.length}}</a>
               <ul ng-click="unexpand()" ng-show="showCopies">
