--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -6,6 +6,7 @@
     <script src="app.js"></script>
     <link rel="stylesheet" href="angular-table.css">
     <link rel="stylesheet" href="app.css">
+    <style>.angularTableTableContainer { height: auto !important; }</style>
   </head>
   <body>
     <div ng-controller="GeneologyCtrl">
