--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -10,14 +10,16 @@
   </head>
   <body>
     <div ng-controller="GeneologyCtrl">
-      <h2>Original dataset</h2>
+      <h2>Choose a dataset</h2>
+      <ul>
+        <li ng-repeat="i in tableIdIndices">
+          <a href="" ng-click="_load({{i}})">{{tableIds[i][2]}}</a>
+        </li>
+      </ul>
+      <h2>About the original dataset</h2>
       <div>
-        <a href="" ng-click="prev()">Previous</a>
         {{table.source.name}} (<a href="https://{{table.source.portal}}/-/-/{{table.source.id}}">{{mainPortal}}</a>)
-        <a href="" ng-click="next()">Next</a>
       </div>
-{{dropdown}}
-      <button type="button" class="btn" bs-dropdown="dropdown">...</button>
       <p>{{table.source.description}}</p>
       <h2>Derived datasets</h2>
       <angular-table model="table.datasets" default-sort-column="createdAt">
