--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -70,7 +70,7 @@
           <row
             on-selected="handleRowSelection(row)"
             selected-color="#87cefa" even-color="#ffffff" odd-color="#eeeeee">
-            <column><a href="https://{{table.source.portal}}/-/-/{{row.id}}">{{row.id}}</a></column>
+            <column><a href="https://{{row.source_portal_hack}}/-/-/{{row.id}}">{{row.id}}</a></column>
             <column>{{row.name}}</column>
             <column>{{row.prettyDate}}</column>
             <column>{{row.viewCount}}</column>
