notes from nicole

--- a/r/02-geneology/index.html
+++ b/r/02-geneology/index.html
@@ -14,6 +14,13 @@
     <p>Explain viewFilters and provisions to other data portals</p>
     <p>Out of these datasets, I took out nine of the top ten (Explain the weird one.) datasets, and here I show their families.</p>
     <p>Explain the quirk about redirects that I didn't handle</p>
+    <h2>Notes from Nicole</h2>
+    <ul>
+      <li>Oakland had the option to import all of the datasets from other portals in order to make the search work across portals, but they couldn't import just some of the datasets.</li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
     <div ng-controller="GeneologyCtrl">
       <select ng-model="table" ng-options="t.source.name for t in tables">
         <option value="">Choose a dataset</option>
